crates/alder-parse/src/item/snapshots/alder_parse__item__component__tests__error_body.snap
---
source: crates/alder-parse/src/item/component.rs
description: "component App() { let }"
---
Body(
    Stmt(
        Let(
            Pattern(
                Start(
                    1,
                    23,
                ),
                1,
                23,
            ),
            1,
            19,
        ),
        1,
        19,
    ),
    1,
    17,
)
