crates/alder-parse/src/item/snapshots/alder_parse__item__component__tests__error_name.snap
---
source: crates/alder-parse/src/item/component.rs
description: "component 1() {}"
---
Name(
    1,
    11,
)
