crates/alder-parse/src/item/snapshots/alder_parse__item__component__tests__error_name_reserved.snap
---
source: crates/alder-parse/src/item/component.rs
description: "component for() {}"
---
Name(
    1,
    11,
)
