crates/alder-parse/src/item/snapshots/alder_parse__item__component__tests__error_no_body.snap
---
source: crates/alder-parse/src/item/component.rs
description: component App()
---
Body(
    Open(
        1,
        16,
    ),
    1,
    16,
)
