crates/alder-parse/src/item/snapshots/alder_parse__item__component__tests__error_params.snap
---
source: crates/alder-parse/src/item/component.rs
description: "component App {}"
---
Params(
    Open(
        1,
        15,
    ),
    1,
    15,
)
