crates/alder-parse/src/item/snapshots/alder_parse__item__component__tests__error_params_end.snap
---
source: crates/alder-parse/src/item/component.rs
description: "component App(a b) {}"
---
Params(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 14,
            },
            boundary: Position {
                line: 1,
                column: 16,
            },
            unexpected: Position {
                line: 1,
                column: 17,
            },
        },
    ),
    1,
    14,
)
